[package]
name = "dummywebserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.158"
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "rapidoc"] }

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]
